force-app/main/default/objects/Product2/fields/Blurb__c.field-meta.xml
<CustomField>
    <fullName>Blurb__c</fullName>
    <description>A shorter description for line items and the front of the Catalog mobile app.</description>
    <inlineHelpText>Required for Product Catalog. A sentence that highlights the item in the Product Catalog.</inlineHelpText>
    <label>Blurb</label>
    <type>TextArea</type>
</CustomField>