force-app/main/default/objects/Product2/fields/Con_cochera__c.field-meta.xml
<CustomField>
    <fullName>Con_cochera__c</fullName>
    <formula>Unidad__r.Con_cochera__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Con cochera</label>
    <type>Checkbox</type>
</CustomField>