force-app/main/default/objects/Product2/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disponible</fullName>
                <default>true</default>
                <label>Disponible</label>
            </value>
            <value>
                <fullName>Reservado</fullName>
            </value>
            <value>
                <fullName>Vendido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>