force-app/main/default/objects/Product2/fields/Image_Display__c.field-meta.xml
<CustomField>
    <fullName>Image_Display__c</fullName>
    <description>Displays an image using the Image Document ID.</description>
    <formula>IMAGE(IF(ISBLANK(Image_Document_ID__c), &quot;/resource/NoImage&quot;, &quot;/servlet/servlet.FileDownload?file=&quot; &amp; Image_Document_ID__c), &quot;Image Name&quot;)</formula>
    <inlineHelpText>Displays in Product Catalog. Enter an Image Document ID to display an image for this product.</inlineHelpText>
    <label>Catalog Image</label>
    <type>Text</type>
</CustomField>