force-app/main/default/objects/Product2/fields/Image_Document_ID__c.field-meta.xml
<CustomField>
    <fullName>Image_Document_ID__c</fullName>
    <description>The Salesforce ID of the image document you wish to display in the Product Catalog.</description>
    <inlineHelpText>Required for Product Catalog. The Salesforce ID of the image document you wish to display in the Product Catalog.</inlineHelpText>
    <label>Image Document ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>