force-app/main/default/objects/Product2/fields/Metros_cuadrados_vendibles__c.field-meta.xml
<CustomField>
    <fullName>Metros_cuadrados_vendibles__c</fullName>
    <formula>Unidad__r.Metros_cuadrados__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Metros cuadrados vendibles</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>