force-app/main/default/objects/Product2/fields/Metros_cubiertos__c.field-meta.xml
<CustomField>
    <fullName>Metros_cubiertos__c</fullName>
    <formula>Unidad__r.Metros_cubiertos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Metros cubiertos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>