force-app/main/default/objects/Product2/fields/Metros_descubiertos__c.field-meta.xml
<CustomField>
    <fullName>Metros_descubiertos__c</fullName>
    <formula>Unidad__r.Metros_descubiertos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Metros descubiertos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>