force-app/main/default/objects/Product2/fields/Unidad__c.field-meta.xml
<CustomField>
    <fullName>Unidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unidad</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Obra__c</field>
            <operation>equals</operation>
            <valueField>Unidad__c.Obra__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Unidad__c</referenceTo>
    <relationshipLabel>Productos</relationshipLabel>
    <relationshipName>Productos</relationshipName>
    <type>Lookup</type>
</CustomField>