force-app/main/default/objects/Product2/fields/VF_Image__c.field-meta.xml
<CustomField>
    <fullName>VF_Image__c</fullName>
    <description>Used in Product Catalog. This formula is used to display the Image Document ID in the Catalog mobile app.</description>
    <formula>IF(ISBLANK(Image_Document_ID__c), &quot;/resource/ProductCatalogResources/ProductCatalog/Images/NoImage.png&quot;, &quot;/servlet/servlet.FileDownload?file=&quot; &amp; Image_Document_ID__c)</formula>
    <inlineHelpText>Used in Product Catalog. This formula is used to display the Image Document ID in the Catalog mobile app.</inlineHelpText>
    <label>VF Image</label>
    <type>Text</type>
</CustomField>