force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>Blurb__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>Image_Display__c</columns>
    <columns>Estado__c</columns>
    <columns>Inventory__c</columns>
    <columns>Mobile_Ready__c</columns>
    <columns>Default_Price__c</columns>
    <columns>Unidad__c</columns>
    <columns>Obra__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos los productos</label>
</ListView>