force-app/main/default/objects/Product2/listViews/LARRALDE_2227.listView-meta.xml
<ListView>
    <fullName>LARRALDE_2227</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Unidad__c</columns>
    <columns>Estado__c</columns>
    <columns>Metros_cuadrados_vendibles__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Obra__c</field>
        <operation>equals</operation>
        <value>Larralde 2227</value>
    </filters>
    <label>LARRALDE 2227</label>
</ListView>